# LOS

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260101_0001_initial_schema.py
backend/: Dockerfile  __init__.py  main.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  dependencies.py  schemas.py  websocket.py
backend/api/v1/middleware/: __init__.py  audit.py  rate_limiter.py  request_id.py  security_headers.py
backend/api/v1/routers/: __init__.py  admin.py  auth.py  events.py  health.py  interventions.py  lagoons.py  observations.py  recommendations.py  reports.py  sensors.py  simulations.py  users.py
backend/application/: __init__.py
backend/application/services/: __init__.py  lagoon_service.py  observation_service.py  recommendation_service.py  report_service.py
backend/core/: __init__.py
backend/core/config/: __init__.py  settings.py
backend/core/exceptions/: __init__.py  exceptions.py
backend/core/logging/: __init__.py  logger.py
backend/core/security/: __init__.py  audit.py  jwt.py  rbac.py
backend/database/: __init__.py  connection.py  models.py  seed_data.py
backend/database/migrations/: 001_initial_schema.sql
backend/database/repositories/: __init__.py  base.py  event_repo.py  event_repository.py  intervention_repo.py  intervention_repository.py  lagoon_repo.py  lagoon_repository.py  observation_repo.py  observation_repository.py  recommendation_repo.py  recommendation_repository.py  report_data_provider.py  report_repo.py  sensor_repo.py  sensor_repository.py  simulation_repo.py  user_repo.py
backend/decision_engine/: __init__.py  engine.py  models.py  objectives.py  orchestrator.py
backend/event_bus/: __init__.py  bus.py  models.py  publishers.py
backend/scientific_models/: base.py
backend/scientific_models/chemical/: nutrient_cycling.py  phreeqc_wrapper.py  redox_model.py
backend/scientific_models/ecological/: algal_dynamics.py
backend/scientific_models/hydrogeological/: __init__.py  modflow_wrapper.py
backend/scientific_models/hydrological/: residence_time.py  water_balance.py
backend/scientific_models/infrastructure/: __init__.py  aeration_efficiency.py  pump_performance.py
backend/scientific_models/ml/: __init__.py  anomaly_detection.py
backend/scientific_models/statistical/: __init__.py  bayesian_updater.py  trend_analysis.py
backend/scientific_relationship_graph/: __init__.py  models.py  seed_data.py  service.py
backend/scientific_services/: base.py
backend/scientific_services/chemical/: __init__.py  calculations.py  models.py  service.py
backend/scientific_services/compliance/: __init__.py  models.py  service.py
backend/scientific_services/ecological/: __init__.py  calculations.py  models.py  service.py
backend/scientific_services/hydrological/: __init__.py  calculations.py  models.py  service.py
backend/scientific_services/infrastructure/: __init__.py  models.py  service.py
backend/scientific_services/learning/: service.py
backend/scientific_services/prediction/: models.py  service.py
backend/scientific_services/recommendation/: models.py  service.py
backend/shared_memory/: __init__.py  models.py  service.py
backend/workers/: __init__.py  celery_app.py  celery_config.py
backend/workers/tasks/: __init__.py  learning_tasks.py  notification_tasks.py  reporting_tasks.py  scientific_tasks.py  simulation_tasks.py
deployment/docker/: alerts.yml  prometheus.yml
deployment/docker/grafana/provisioning/dashboards/: dashboard.yml
deployment/scripts/: init_db.sh  seed_srg.py
docs/admin/: administrator_guide.md
docs/api/: reference.md
docs/architecture/: overview.md
docs/deployment/: production.md
docs/developer/: getting_started.md
docs/scientific/: scientific_models.md
docs/user/: user_guide.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: BloomProbabilityChart.tsx  ConfidenceGauge.tsx  LoopInteractionDiagram.tsx  TimeSeriesChart.tsx  WaterQualityRadar.tsx
frontend/src/components/shared/: ConfidenceIndicator.tsx  ErrorBoundary.tsx  EventFeed.tsx  LagoonSelector.tsx  Layout.tsx  MetricCard.tsx  RecommendationCard.tsx  ScientificLoopStatus.tsx  SparklineChart.tsx  StatusIndicator.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  progress.tsx  toast.tsx
frontend/src/hooks/: useAuth.ts  useLagoon.ts  useObservations.ts  useRealtimeEvents.ts  useRecommendations.ts  useSystemState.ts
frontend/src/lib/: api.ts  supabase.ts  utils.test.ts  utils.ts  websocket.ts
frontend/src/pages/: AdaptiveSampling.tsx  Administration.tsx  ExecutiveDashboard.tsx  Login.tsx  NotFound.tsx  OperationalDashboard.tsx  PredictiveMonitoring.tsx  Recommendations.tsx  Reports.tsx  ScientificWorkspace.tsx
frontend/src/stores/: auth.store.ts  lagoon.store.ts  notification.store.ts
frontend/src/types/: index.ts
scripts/: run_decision_cycle.py  run_loops.py  seed_observations.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  conftest.py  test_health_endpoints.py
tests/e2e/: test_full_pipeline.py
tests/integration/: __init__.py  test_event_bus.py
tests/performance/: test_latency.py
tests/scientific_validation/: __init__.py  test_lagoon_scenarios.py
tests/unit/: __init__.py
tests/unit/backend/: __init__.py  test_anomaly_detection.py  test_bayesian_updater.py  test_decision_engine.py  test_infrastructure_models.py
tests/unit/scientific_services/: __init__.py  test_chemical_calculations.py  test_compliance_service.py  test_hydrological_calculations.py
